--- a/tmux.conf
+++ b/tmux.conf
@@ -2,8 +2,6 @@
 set -g base-index 1
 
 # Automatically set window title
-set-window-option -g automatic-rename on
-set-option -g set-titles on
 
 #set -g default-terminal screen-256color
 set -g status-keys vi
@@ -125,6 +123,8 @@ set-option -g status-right "#[fg=colour239, bg=colour237, nobold, nounderscore, 
 
 set-window-option -g window-status-current-format "#[fg=colour239, bg=colour248, :nobold, noitalics, nounderscore]#[fg=colour239, bg=colour214] #I #[fg=colour239, bg=colour214, bold] #W #[fg=colour214, bg=colour237, nobold, noitalics, nounderscore]"
 set-window-option -g window-status-format "#[fg=colour237,bg=colour239,noitalics]#[fg=colour223,bg=colour239] #I #[fg=colour223, bg=colour239] #W #[fg=colour239, bg=colour237, noitalics]"
-
+set-option -ga terminal-overrides ",screen-256color:Tc"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
+set-window-option -g allow-rename off
