--- a/tmux.conf
+++ b/tmux.conf
@@ -125,6 +125,7 @@ set-window-option -g window-status-current-format "#[fg=colour239, bg=colour248,
 set-window-option -g window-status-format "#[fg=colour237,bg=colour239,noitalics]#[fg=colour223,bg=colour239] #I #[fg=colour223, bg=colour239] #W #[fg=colour239, bg=colour237, noitalics]"
 set-option -ga terminal-overrides ",screen-256color:Tc"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-terminal "tmux-256color"
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 set-window-option -g allow-rename off
